--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -77,5 +77,6 @@
   "sn22.79:11.22": "jegliche Art von Entscheidungen … ",
   "sn22.79:11.23": "jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliches Bewusstsein – wahrhaftig mit rechter Weisheit sehen: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
   "sn22.79:12.1": "Dann nennt man ihn einen edlen Schüler, der der Dinge loswird, nicht Dinge anhäuft; ",
-  "sn22.79:12.2": "der Dinge aufgibt, nicht Dinge ergreift; "
+  "sn22.79:12.2": "der Dinge aufgibt, nicht Dinge ergreift; ",
+  "sn22.79:12.3": "der Dinge wegwirft, nicht Dinge aufbewahrt; "
 }
