--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -84,5 +84,6 @@
   "sn22.79:12.6": "Form wird er los und häuft sie nicht an. ",
   "sn22.79:12.7": "Gefühl … ",
   "sn22.79:12.8": "Wahrnehmung … ",
-  "sn22.79:12.9": "Entscheidungen … "
+  "sn22.79:12.9": "Entscheidungen … ",
+  "sn22.79:12.10": "Bewusstsein wird er los und häuft es nicht an. "
 }
