--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -86,5 +86,6 @@
   "sn22.79:12.8": "Wahrnehmung … ",
   "sn22.79:12.9": "Entscheidungen … ",
   "sn22.79:12.10": "Bewusstsein wird er los und häuft es nicht an. ",
-  "sn22.79:12.11": "Und welche Dinge gibt er auf und ergreift sie nicht? "
+  "sn22.79:12.11": "Und welche Dinge gibt er auf und ergreift sie nicht? ",
+  "sn22.79:12.12": "Form gibt er auf und ergreift sie nicht. "
 }
