--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -93,5 +93,6 @@
   "sn22.79:12.15": "Entscheidungen … ",
   "sn22.79:12.16": "Bewusstsein gibt er auf und ergreift es nicht. ",
   "sn22.79:12.17": "Und welche Dinge wirft er weg und bewahrt sie nicht auf? ",
-  "sn22.79:12.18": "Form wirft er weg und bewahrt sie nicht auf. "
+  "sn22.79:12.18": "Form wirft er weg und bewahrt sie nicht auf. ",
+  "sn22.79:12.19": "Gefühl … "
 }
