--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -97,5 +97,6 @@
   "sn22.79:12.19": "Gefühl … ",
   "sn22.79:12.20": "Wahrnehmung … ",
   "sn22.79:12.21": "Entscheidungen … ",
-  "sn22.79:12.22": "Bewusstsein wirft er weg und bewahrt es nicht auf. "
+  "sn22.79:12.22": "Bewusstsein wirft er weg und bewahrt es nicht auf. ",
+  "sn22.79:12.23": "Und welche Dinge zerteilt er und ballt sie nicht zu Wolken zusamen? "
 }
