--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -103,5 +103,6 @@
   "sn22.79:12.25": "Gefühl … ",
   "sn22.79:12.26": "Wahrnehmung … ",
   "sn22.79:12.27": "Entscheidungen … ",
-  "sn22.79:12.28": "Bewusstsein zerteilt er und ballt es nicht zu Wolken zusamen. "
+  "sn22.79:12.28": "Bewusstsein zerteilt er und ballt es nicht zu Wolken zusamen. ",
+  "sn22.79:13.1": "Wenn er das sieht, wird ein gebildeter edler Schüler ernüchtert von Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein. "
 }
