--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -110,5 +110,6 @@
   "sn22.79:14.1": "Das nennt man einen Mönch, der weder Dinge loswird noch sie anhäuft, sondern stetig bleibt, nachdem er sie losgeworden ist; der weder Dinge aufgibt noch sie ergreift, sondern stetig bleibt, nachdem er sie aufgegeben hat; der weder Dinge wegwirft noch sie aufbewahrt, sondern stetig bleibt, nachdem er sie weggeworfen hat; der weder Dinge zerteilt noch sie zu Wolken zusammenballt, sondern stetig bleibt, nachdem er sie zerteilt hat. ",
   "sn22.79:14.2": "Und welche Dinge wird er weder los noch häuft sie nicht an, sondern bleibt stetig, nachdem er sie losgeworden ist? ",
   "sn22.79:14.3": "Form wird er weder los noch häuft er sie nicht an, sondern bleibt stetig, nachdem er sie losgeworden ist. ",
-  "sn22.79:14.4": "Gefühl … "
+  "sn22.79:14.4": "Gefühl … ",
+  "sn22.79:14.5": "Wahrnehmung … "
 }
