--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -111,5 +111,6 @@
   "sn22.79:14.2": "Und welche Dinge wird er weder los noch häuft sie nicht an, sondern bleibt stetig, nachdem er sie losgeworden ist? ",
   "sn22.79:14.3": "Form wird er weder los noch häuft er sie nicht an, sondern bleibt stetig, nachdem er sie losgeworden ist. ",
   "sn22.79:14.4": "Gefühl … ",
-  "sn22.79:14.5": "Wahrnehmung … "
+  "sn22.79:14.5": "Wahrnehmung … ",
+  "sn22.79:14.6": "Entscheidungen … "
 }
