--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -112,5 +112,6 @@
   "sn22.79:14.3": "Form wird er weder los noch häuft er sie an, sondern bleibt stetig, nachdem er sie losgeworden ist. ",
   "sn22.79:14.4": "Gefühl … ",
   "sn22.79:14.5": "Wahrnehmung … ",
-  "sn22.79:14.6": "Entscheidungen … "
+  "sn22.79:14.6": "Entscheidungen … ",
+  "sn22.79:14.7": "Bewusstsein wird er weder los noch häuft er es an, sondern bleibt stetig, nachdem er es losgeworden ist. "
 }
