--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -114,5 +114,6 @@
   "sn22.79:14.5": "Wahrnehmung … ",
   "sn22.79:14.6": "Entscheidungen … ",
   "sn22.79:14.7": "Bewusstsein wird er weder los noch häuft er es an, sondern bleibt stetig, nachdem er es losgeworden ist. ",
-  "sn22.79:14.8": "Und welche Dinge gibt er weder auf noch ergreift sie, sondern bleibt stetig, nachdem er sie aufgegeben hat? "
+  "sn22.79:14.8": "Und welche Dinge gibt er weder auf noch ergreift sie, sondern bleibt stetig, nachdem er sie aufgegeben hat? ",
+  "sn22.79:14.9": "Form gibt er weder auf noch ergreift er sie, sondern bleibt stetig, nachdem er sie aufgegeben hat. "
 }
