--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -120,5 +120,6 @@
   "sn22.79:14.11": "Wahrnehmung … ",
   "sn22.79:14.12": "Entscheidungen … ",
   "sn22.79:14.13": "Bewusstsein gibt er weder auf noch ergreift er es, sondern bleibt stetig, nachdem er es aufgegeben hat. ",
-  "sn22.79:14.14": "Und welche Dinge wirft er weder weg noch bewahrt sie auf, sondern bleibt stetig, nachdem er sie weggeworfen hat? "
+  "sn22.79:14.14": "Und welche Dinge wirft er weder weg noch bewahrt sie auf, sondern bleibt stetig, nachdem er sie weggeworfen hat? ",
+  "sn22.79:14.15": "Form wirft er weder weg noch bewahrt er sie auf, sondern bleibt stetig, nachdem er sie weggeworfen hat. "
 }
