--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -124,5 +124,6 @@
   "sn22.79:14.15": "Form wirft er weder weg noch bewahrt er sie auf, sondern bleibt stetig, nachdem er sie weggeworfen hat. ",
   "sn22.79:14.16": "Gefühl … ",
   "sn22.79:14.17": "Wahrnehmung … ",
-  "sn22.79:14.18": "Entscheidungen … "
+  "sn22.79:14.18": "Entscheidungen … ",
+  "sn22.79:14.19": "Bewusstsein wirft er weder weg noch bewahrt er es auf, sondern bleibt stetig, nachdem er es weggeworfen hat. "
 }
