--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -125,5 +125,6 @@
   "sn22.79:14.16": "Gefühl … ",
   "sn22.79:14.17": "Wahrnehmung … ",
   "sn22.79:14.18": "Entscheidungen … ",
-  "sn22.79:14.19": "Bewusstsein wirft er weder weg noch bewahrt er es auf, sondern bleibt stetig, nachdem er es weggeworfen hat. "
+  "sn22.79:14.19": "Bewusstsein wirft er weder weg noch bewahrt er es auf, sondern bleibt stetig, nachdem er es weggeworfen hat. ",
+  "sn22.79:14.20": "Und welche Dinge zerteilt er weder noch ballt sie zu Wolken zusammen, sondern bleibt stetig, nachdem er sie zerteilt hat? "
 }
