--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn22.80:1.2": "Da kleidete der Buddha sich am Morgen an, nahm Schale und Robe und betrat Kapilavatthu zum Almosengang. ",
   "sn22.80:1.3": "Er zog um Almosen durch Kapilavatthu. Nach dem Essen, als er vom Almosengang zurückkam, ging er in den Großen Wald, ",
   "sn22.80:1.4": "begab sich tief hinein und setzte sich an den Fuß eines jungen Dattelpflaumen-Baumes, um den Tag über dort zu meditieren. ",
-  "sn22.80:2.1": "Da kam ihm, als er für sich allein in Klausur war, dieser Gedanke in den Sinn: "
+  "sn22.80:2.1": "Da kam ihm, als er für sich allein in Klausur war, dieser Gedanke in den Sinn: ",
+  "sn22.80:2.2": "„Ich habe den Saṅgha der Mönche und Nonnen fortgeschickt. "
 }
