--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -94,5 +94,6 @@
   "mn4:17.6": "બ્રાહ્મણ, આમ મારામાં સાચી સ્મૃતિ અને સંપજ્ઞાન જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
   "mn4:18.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
   "mn4:18.2": "‘જ્યારે પણ કોઇ સમાધીહીન અને ભટકતા મન વાળા સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે સમાધીહીનતા અને ભટકતા મનના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
-  "mn4:18.3": "પણ હું સમાધીહીનતા અને ભટકતા મન સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો."
+  "mn4:18.3": "પણ હું સમાધીહીનતા અને ભટકતા મન સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
+  "mn4:18.4": "હું સમાધિ સંપન્ન છું."
 }
