--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -97,5 +97,6 @@
   "mn4:18.3": "પણ હું સમાધીહીનતા અને ભટકતા મન સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
   "mn4:18.4": "હું સમાધિસંપન્ન છું.",
   "mn4:18.5": "હું એક એવો આર્યસાધક છું જે સમાધિસંપન્ન થઇ ગયેલા મન સાથે ગાઢ વનમાં રહેઠાણ રાખે છે’",
-  "mn4:18.6": "બ્રાહ્મણ, આમ મારામાં સમાધિસંપન્નતા જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો."
+  "mn4:18.6": "બ્રાહ્મણ, આમ મારામાં સમાધિસંપન્નતા જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
+  "mn4:19.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:"
 }
