--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -10,5 +10,5 @@
   "sn22.80:2.2": "„Ich habe den Saṅgha der Mönche und Nonnen fortgeschickt. ",
   "sn22.80:2.3": "Doch da sind Mönche und Nonnen, die neu im Orden sind, kürzlich fortgezogen und neu zu dieser Lehre und Schulung gekommen. ",
   "sn22.80:2.4": "Wenn sie mich nicht sehen, könnten sie sich ändern und zugrunde gehen. ",
-  "sn22.80:2.5": "Wie ein junges Kalb, das seine Mutter nicht sieht: Es könnte unsicher werden und verloren gehen. … "
+  "sn22.80:2.5": "Wie ein junges Kalb, das seine Mutter nicht sieht: Es könnte sich ändern und zugrunde gehen. … "
 }
