--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn22.80:2.9": "Wenn sie mich nicht sehen, könnten sie sich ändern und zugrunde gehen. ",
   "sn22.80:2.10": "Warum unterstütze ich den Saṅgha der Mönche und Nonnen nicht jetzt genauso wie früher?“ ",
   "sn22.80:3.1": "Da erkannte Brahmā Sahampati, was der Buddha dachte. Und so leicht, wie eine starke Person den Arm strecken oder beugen würde, verschwand er aus der Brahmāwelt und erschien wieder vor dem Buddha. ",
-  "sn22.80:3.2": "Er ordnete seine Robe über einer Schulter, erhob seine zusammengelegten Hände zum Buddha und sagte: "
+  "sn22.80:3.2": "Er ordnete seine Robe über einer Schulter, erhob seine zusammengelegten Hände zum Buddha und sagte: ",
+  "sn22.80:3.3": "„Das ist wirklich wahr, Gesegneter! Das ist wirklich wahr, Heiliger! "
 }
