--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn22.80:3.3": "„Das ist wirklich wahr, Gesegneter! Das ist wirklich wahr, Heiliger! ",
   "sn22.80:3.4": "Der Buddha hat den Saṅgha der Mönche und Nonnen fortgeschickt. ",
   "sn22.80:3.5": "Doch da sind Mönche und Nonnen, die neu im Orden sind, kürzlich fortgezogen und neu zu dieser Lehre und Schulung gekommen. … ",
-  "sn22.80:3.11": "Dass doch der Buddha am Saṅgha der Mönche und Nonnen Freude hätte! "
+  "sn22.80:3.11": "Dass doch der Buddha am Saṅgha der Mönche und Nonnen Freude hätte! ",
+  "sn22.80:3.12": "Dass doch der Buddha den Saṅgha der Mönche und Nonnen willkommen heiße! "
 }
