--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -102,5 +102,6 @@
   "mn4:19.2": "‘જ્યારે પણ કોઇ મૂર્ખ અને મૂઢ સાધક અથવા બ્રાહ્મણ ગાઢ વનમાં રહેઠાણ રાખે છે ત્યારે મૂર્ખતા અને મૂઢતાના દોષને લીધે તેઓ અકુશળ ડર અને બીકને જાગૃત કરે છે.",
   "mn4:19.3": "પણ હું મૂર્ખતા અને મૂઢતા સાથે ગાઢ વનમાં રહેઠાણ નથી રાખતો.",
   "mn4:19.4": "હું પ્રજ્ઞાસંપન્ન છું.",
-  "mn4:19.5": "હું એક એવો આર્યસાધક છું જે પ્રજ્ઞાસંપન્ન થઇને ગાઢ વનમાં રહેઠાણ રાખે છે’"
+  "mn4:19.5": "હું એક એવો આર્યસાધક છું જે પ્રજ્ઞાસંપન્ન થઇને ગાઢ વનમાં રહેઠાણ રાખે છે’",
+  "mn4:19.6": "બ્રાહ્મણ, આમ મારામાં પ્રજ્ઞાસંપન્નતા જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો."
 }
