--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -105,5 +105,6 @@
   "mn4:19.5": "હું એક એવો આર્યસાધક છું જે પ્રજ્ઞાસંપન્ન થઇને ગાઢ વનમાં રહેઠાણ રાખે છે’",
   "mn4:19.6": "બ્રાહ્મણ, આમ મારામાં પ્રજ્ઞાસંપન્નતા જોઇને મને ગાઢ વનમાં રહેવામાં વધારે આશ્વાસન મળ્યો અને ઉત્સાહ થયો.",
   "mn4:19.7": "સોળસપરિયાયની સમાપ્તિ.",
-  "mn4:20.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:"
+  "mn4:20.1": "બ્રાહ્મણ, પછી મને એવો વિચાર આવ્યો:",
+  "mn4:20.2": "‘અમુક રાતો ખાસ કરીને શુકનવાળી હોય છે—"
 }
